<resources>
    <string name="app_name">my.music</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="add_music">Добавить музыку</string>
    <string name="my_playlists">Мои плейлисты</string>
    <string name="music_added_successfully">Музыка успешно добавлена</string>
    <string name="music_added_other_error">Неизвестная ошибка при добавлении музыки</string>
    <string name="music_already_exist">Музыка уже была добавлена ранее</string>
    <string name="more_points">…</string>
    <string name="music_deleted_successfully">Музыка успешно удалена</string>
    <string name="music_deleted_other_error">Неизвестная ошибка при удалении музыки</string>
    <string name="duration">Продолжительность</string>
    <string name="file_size">Размер файла</string>
    <string name="genre">Жанр</string>
    <string name="bitrate">Скорость потока</string>
    <string name="track_info">Информация о треке</string>
    <string name="track_name">Название трека</string>
    <string name="author">Исполнитель</string>
    <string name="release_year">Год выпуска</string>
    <string name="last_use">Последнему использованию</string>
    <string name="mix">Перемешать</string>
    <string name="repeat_off">🔁</string>
    <string name="repeat_on">🔂</string>
</resources>