<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="ru.tigrilla.my_music.view_model.PlayViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <SeekBar
            android:id="@+id/musicSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:max="@{(int)viewModel.duration.seconds}"
            android:progress="@{(int)viewModel.currentDuration.seconds}"
            android:enabled="@{viewModel.enabled}"
            app:layout_constraintEnd_toStartOf="@+id/textView29"
            app:layout_constraintStart_toEndOf="@+id/textView28"
            app:layout_constraintTop_toBottomOf="@+id/imageButtonPlayStopMusic" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@{viewModel.formatDuration(viewModel.duration)}"
            app:layout_constraintBottom_toBottomOf="@+id/musicSeekBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/musicSeekBar" />

        <ImageButton
            android:id="@+id/imageButtonNextMusic"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="8dp"
            android:src="@android:drawable/ic_media_ff"
            android:enabled="@{viewModel.enabled}"
            app:layout_constraintBottom_toBottomOf="@+id/imageButtonPlayStopMusic"
            app:layout_constraintStart_toEndOf="@+id/imageButtonPlayStopMusic"
            app:layout_constraintTop_toTopOf="@+id/imageButtonPlayStopMusic" />

        <ImageButton
            android:id="@+id/imageButtonPlayStopMusic"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginTop="32dp"
            android:src="@{viewModel.playing ? @android:drawable/ic_media_pause : @android:drawable/ic_media_play}"
            android:enabled="@{viewModel.enabled}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView31" />

        <ImageButton
            android:id="@+id/imageButtonPrevMusic"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginEnd="8dp"
            android:src="@android:drawable/ic_media_rew"
            android:enabled="@{viewModel.enabled}"
            app:layout_constraintBottom_toBottomOf="@+id/imageButtonPlayStopMusic"
            app:layout_constraintEnd_toStartOf="@+id/imageButtonPlayStopMusic"
            app:layout_constraintTop_toTopOf="@+id/imageButtonPlayStopMusic" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{viewModel.formatDuration(viewModel.currentDuration)}"
            app:layout_constraintBottom_toBottomOf="@+id/musicSeekBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/musicSeekBar"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@{viewModel.enabled ? viewModel.tracks[viewModel.selectedPos].author : ``}"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/space5"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@{viewModel.enabled ? viewModel.tracks[viewModel.selectedPos].name : ``}"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/space5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:id="@+id/space5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/musicSeekBar">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/imageButtonTrash"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:enabled="@{viewModel.enabled}"
                android:src="@android:drawable/ic_menu_delete" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/buttonDetails"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:textSize="12sp"
                android:enabled="@{viewModel.enabled}"
                android:text="@string/more_points" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ToggleButton
                android:id="@+id/toggleButton"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:checked="@={viewModel.repeatEnabled}"
                android:textOff="@string/repeat_off"
                android:textOn="@string/repeat_on"
                android:enabled="@{viewModel.enabled}"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/buttonMix"
                android:layout_width="105dp"
                android:layout_height="38dp"
                android:text="@string/mix"
                android:enabled="@{viewModel.enabled}"
                android:textSize="11sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
